[tool.poetry]
name = "yank"
version = "0.1.0"
description = ""
authors = ["Gökmen Görgen <gkmngrgn@gmail.com>"]
license = "MIT"

[tool.poetry.scripts]
server = "yank.server"
client = "yank.client"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
